# Smart-Contract-Nervos

./: .env.dev  .env.mainnet  .env.testnet  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  capsule.toml
contracts/always-success/: Cargo.toml
contracts/always-success/src/: entry.rs
contracts/c/: Makefile  always_success.c  common.h  structures.h  tx_parser.h  utils.h  xudt_extension.c  xudt_owner.c
contracts/config-cell-type/: Cargo.toml
contracts/config-cell-type/src/: entry.rs  error.rs  main.rs
contracts/governance-member-cell-type/: Cargo.toml
contracts/governance-member-cell-type/src/: entry.rs  error.rs
contracts/tick-cell-type/: Cargo.toml
contracts/tick-cell-type/src/: entry.rs  error.rs  main.rs  parser.rs
deployed-scripts/: always_success  fake-omni-lock  fake-secp256k1-blake160-multisig-all  fake-secp256k1-blake160-signhash-all  xudt_rce
libs/core/: Cargo.toml
libs/core/src/: config.rs  constants.rs  error.rs  lib.rs  macros.rs  util.rs
libs/core/src/data_parser/: config_cell.rs  governance_member_cell.rs  mod.rs  tick_cell.rs
libs/core/src/verifiers/: basic.rs  mod.rs  permission.rs
libs/types/: Cargo.toml  LICENSE  README.md  build.rs  compile.sh
libs/types/c/src/: basic.h  cell.h  xudt_rce.h
libs/types/go/src/: basic.go  cell.go  xudt_rce.go
libs/types/rust/src/: constants.rs  convert.rs  lib.rs  util.rs
libs/types/rust/src/schemas/: basic.rs  cell.rs  mod.rs  xudt_rce.rs
libs/types/rust/tests/: util.rs
libs/types/schemas/: xudt_rce.mol
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/config_cell_type/: config.rs
tests/src/custom_parser/: common.rs  config_cell_parser.rs  governance_member_cell_parser.rs  mod.rs  tick_cell_parser.rs  xudt_cell_parser.rs
tests/src/governance_member_cell_type/: init_governance.rs  mod.rs  update_custodians.rs  update_merchants.rs  update_owner.rs
tests/src/template_parser/: constants.rs  mod.rs  script_parser.rs  template_parser.rs  util.rs  var_parser.rs
tests/src/template_parser/cell_parser/: default_cell.rs  mod.rs  traits.rs
tests/src/template_parser/witness_parser/: mod.rs  traits.rs  xudt_witness.rs
tests/src/tick_cell_type/: common.rs  confirm_burn.rs  confirm_mint.rs  mod.rs  reject_burn.rs  reject_mint.rs  request_burn.rs  request_mint.rs
tests/src/token_cell_type/: transfer.rs
tests/src/util/: constants.rs  error.rs  mod.rs  since_util.rs  util.rs
