[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.10"
ckb-mock-tx-types = "0.114"
# workspace crates
types = { workspace = true, features = ["std"] }
# third party crates
hex = "0.4.3"
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
lazy_static = "1.4.0"
regex = "1.0"
rand = "0.8"
log = "^0.4.0"
env_logger = "^0.11"
